--- a/start.html
+++ b/start.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h2>
-    Heading 2
-</h2>
 
-<p> 
-    Hello World! 
-</p>
+<img src="https://www.ucsd.edu/_resources/img/logo_UCSD.png" alt="UCSD_Logo"> <a href="#Section 1"> Section 1 </a> <a href="#Section 2"> Section 2 </a>
+
+<div>
+    <h2 id="Section 1">
+        Section 1
+    </h2>
+
+    <img src="https://brand.ucsd.edu/_images/logos-and-brand-elements/additional-campus-logos/ucsd-athletics-logo.svg" alt="UCSD_campus_logo">
+</div>
+
+
+<div>
+    <h2 id="Section 2">
+        Section 2
+    </h2>
+
+    <img src="https://brand.ucsd.edu/_images/logos/logos-college-logos-07-23.svg" alt="UCSD_colleges"
+</div>
 
 
 </body>
